test/compile-fail/resolution/redefinition/struct/top.rhdl
struct a {}

struct b {}

struct c {}

struct b {}
